# django-real-estate

./: .env.example  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
apps/common/: models.py
apps/enquiries/: admin.py  models.py  serializers.py  urls.py  views.py
apps/enquiries/migrations/: 0001_initial.py
apps/profiles/: exceptions.py  models.py  renderers.py  serializers.py  signals.py  urls.py  views.py
apps/profiles/migrations/: 0001_initial.py
apps/properties/: admin.py  exceptions.py  models.py  pagination.py  serializers.py  urls.py  views.py
apps/properties/migrations/: 0001_initial.py  0002_alter_property_description.py
apps/ratings/: admin.py  models.py  serializers.py  views.py
apps/ratings/migrations/: 0001_initial.py  0002_alter_rating_agent.py
apps/users/: admin.py  forms.py  managers.py  models.py  serializers.py
apps/users/migrations/: 0001_initial.py
client/: package-lock.json  package.json
client/src/: App.js
docker/local/django/: Dockerfile
docker/local/django/celery/worker/: start
docker/local/nginx/: default.conf
real_estate/: celery.py  settings.py  urls.py
real_estate/settings/: base.py  development.py
tests/: factories.py
tests/users/: test_models.py
