[tool.poetry]
name = "estate-src"
version = "0.1.0"
description = ""
authors = ["Yogesh Ambhore <yogeshambhore45@gmail.com>"]
readme = "README.md"
packages = [{include = "estate_src"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"
django-filter = "^22.1"
django-autoslug = "^1.9.8"
django-countries = "^7.5.1"
pillow = "^9.4.0"
django-phonenumber-field = "^7.0.2"
phonenumbers = "^8.13.7"
psycopg2-binary = "^2.9.5"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
djoser = "2.1.0"
djangorestframework-simplejwt = "4.8.0"
pyjwt = "2.1.0"
django-extensions = "^3.2.1"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"
faker = "^18.3.0"
pytest-cov = "^4.0.0"
redis = "3.5.3"
celery = "4.4.7"
flower = "0.9.7"
django-celery-email = "3.0.0"
argh = "0.26.2"
pyyaml = "5.3.1"
watchdog = "1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
/(
    | env
)/
'''
